--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@ body {
 	width: 100%;
 	height: 100%;
 	font-family: ;
-	background-image: url(../images/mine.jpg);
+	background-image: url();
 	background-repeat: no-repeat;
 	background-size: cover;
 }
@@ -15,22 +15,83 @@ div {
 }
 .jumbotron {
 	background-color: rgba(202, 204, 226, 0.4);
-	max-height: 240px;
+	max-height: 150px;
 	padding-top: 10px;
 	padding-left: 240px;
-
+	margin-bottom: 10px;
 }
 .display-4 {
 	font-family: 'Fugaz One', cursive;
 	font-size: 60px;
-	margin: 15px;
+	margin: 10px;
 
 }
 .lead {
 	font-family: 'Niconne', cursive;
-	font-size: 32px;
+	font-size: 28px;
 	line-height: 120%;
-	color: #ebecff;
+	color: black;
 	text-align: center;
+	z-index: 10;
 
+}
+#mainWrapper {
+	margin: 10px 8%;
+	width: 100%;
+}
+#mainRow {
+	width: 100%;
+	background-color: rgba(110, 104, 104, 0.34);
+	height: 500px;
+	margin: 0;
+}
+
+#mainSection {
+	float: left;
+	min-height: 400px;
+	margin: 10px;
+	background-color: rgba(80, 80, 70, 0.4);
+	padding: 10px;
+}
+#questionText {
+	width: 100%;
+	font-family: 'Josefin+Sans', Sans;
+	font-size: 40px;
+	color: rgba(110, 110, 110, 1);
+	margin: 0px;
+}
+h2 {
+	font-size: 40px;
+}
+#optionButtons {
+	margin-left: 100px;
+}
+.buttons {
+	display: block;
+	border: 2px solid darkgray;
+	background-color: white;
+	color: darkgray;
+	border-radius: 4px;
+	font-size: 32px;
+	text-align: center;
+	min-width: 200px;
+	padding: 10px 20px;
+	margin: 10px;
+}
+
+#timerBox {
+	font-size: 24px;
+	font-family: 'Josefin+Sans', Sans;
+	color: white;
+	background-color: rgba(110, 104, 104, 0.94);
+	padding: 20px;
+	float: right;
+	margin: 10px 10px 0 0;
+}
+h3 {
+	font-size: 36px;
+}
+#timerReadout {
+	font-size: 72px;
+	font-family: 'Fugaz One', cursive;
 }
