--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,8 @@ h2 {
 }
 #optionButtons {
 	margin-left: 100px;
+	font-size: 40px;
+	font-family: 'Josefin+Sans', Sans;
 }
 .buttons {
 	display: block;
