--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,7 @@ div {
 .display-4 {
 	font-family: 'Plaster', serif;
 	font-size: 60px;
-	color: rgba(31, 33, 45, 1);
+	color: rgba(40, 42, 62, 1);
 	margin: 10px 40px 10px 10px;
 	max-width: 600px;
 	float: left;
@@ -54,15 +54,15 @@ div {
 	margin: 10px;
 	background-color: rgba(80, 80, 70, 0.4);
 	padding: 20px;
-	font-weight: 700;
 }
 #questionText {
 	width: 100%;
-	font-family: 'Raleway', Sans;
-	font-size: 40px;
+	font-family: 'Righteous', Sans;
+/*	font-weight: 700;
+*/	font-size: 40px;
 	color: rgba(107, 47, 10, 1);
 	margin: 0px;
-	font-style: italic;
+	/*font-style: italic;*/
 }
 h2 {
 	font-size: 40px;
@@ -70,7 +70,7 @@ h2 {
 #optionButtons {
 	margin-left: 100px;
 	font-size: 40px;
-	font-family: 'Raleway', Sans;
+	font-family: 'Elsie+Swash+Caps', Sans;
 }
 .buttons {
 	display: block;
@@ -83,8 +83,13 @@ h2 {
 	min-width: 200px;
 	padding: 10px 20px;
 	margin: 10px;
+	font-family: 'Elsie+Swash+Caps', Sans;
 }
-
+.buttons:hover {
+	background-color: rgba(57, 40, 62, 1);
+	color: white;
+	box-shadow: 0 8px 12px 0 #3d3d3d;
+}
 #timerBox {
 	font-size: 24px;
 	font-family: 'Vibur', Sans;
